--- a/src/sass/block/_advantages.scss
+++ b/src/sass/block/_advantages.scss
@@ -1,45 +1,47 @@
 .advantages {
-    min-height: 472px;
     padding: 69px 0 80px 0;
+    background-color: #f6f6f6;
     &__main{
         color: #0d0d0d;
         font-size: 30px;
         font-weight: 700;
         text-align: center;
     }
-    &__wrapper {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: column;  
-    }
     &__icons {
-        width: 922px;
+        
         display: flex;
         align-items: center;
         justify-content: space-between;
         margin-top: 65px;
+        
+        img {
+            display: block;
+            margin: 0 auto;
+
+        }
     }
-    &__text {
-        display: flex;
-        flex-direction: column;
-        width: 922px;
-        margin-top: 38px;
-        justify-content: space-between;
-        align-items: center;
-    }
+    
     &__header {
+        margin-top: 38px;
         color: #0d0d0d;
         font-size: 18px;
         font-weight: 700;
         text-align: center;
     }
     &__subheader {
+        width: 247px;
+        margin-top: 29px;
         color: #0d0d0d;
-        font-family: "Museo Sans Cyrl -300";
         font-size: 14px;
         font-weight: 300;
         text-align: center;
+        a {
+            color: $main-color;
+            font-style: normal;
+            letter-spacing: normal;
+            line-height: normal;
+            text-decoration: underline;
+        }
     }
     
 }
