--- a/src/sass/block/_buttons.scss
+++ b/src/sass/block/_buttons.scss
@@ -19,4 +19,11 @@
         text-align: center;
         text-transform: uppercase;
     }
+    &_consult {
+        width: 100%;
+        height: 55px;
+        color: #ffffff;
+        font-size: 16px;
+       
+    }
 }
