--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -29,4 +29,18 @@
             justify-content: space-between;
         }
     }
+    .consult {
+        padding: 30px 0 10px 0;
+        &__header {
+            font-size: 30px;
+            text-align: center;
+        }
+        &__descr {
+            text-align: center;
+            margin-top: 50px;
+        }
+    }
+    .feed-form {
+        margin-left: 45px;
+    }
 }
