--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,4 +11,6 @@
 @import 'block/buttons';
 @import 'block/advantages';
 @import 'block/consult';
+@import 'block/carousel';
+@import 'block/catalog';
 @import 'base/media';
