--- a/src/sass/block/_catalog.scss
+++ b/src/sass/block/_catalog.scss
@@ -48,6 +48,13 @@
     }
         &__content {
             margin-top: 60px;
+            display: none;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            &__active {
+                display: flex;
+            }
+            
         }
         &-item {
         width: 300px;
@@ -55,6 +62,22 @@
         border: 2px solid #e8e8e8;
         padding: 20px 20px 26px 20px;
         overflow: hidden;
+        margin-bottom: 20px;
+            &__back {
+                position: absolute;
+                bottom: 0;
+                left: 50%;
+                transform: translateX(calc(-50% - 19px));
+                display: block;
+                color: $main-color;
+                font-size: 14px;
+                font-weight: 500;
+                text-decoration: underline;
+                text-transform: uppercase;
+                &:hover {
+                    color: $main-color;
+                }
+            }
             &__img {
             display: block;
             margin: 0 auto;
@@ -82,6 +105,7 @@
                 font-weight: 500;
                 text-align: center;
                 text-decoration: underline;
+                text-transform: uppercase;
                 &:hover {
                     color: $main-color;
                 }
@@ -123,6 +147,7 @@
                 }
             }
             &__list {
+                position: relative;
                 width: 50%;
                 margin-left: 20px;
                 transform: translateX(0%);
@@ -134,6 +159,24 @@
                 &_active {
                     transform: translateX(-100%);
                     margin-left: 0px;
+                }
+                li {
+                    position: relative;
+                    color: #555555;
+                    font-size: 14px;
+                    font-weight: 300;
+                    text-align: left;
+                    margin-bottom: 20px;
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        width: 5px;
+                        height: 5px;
+                        background-color: $main-color;
+                        left: -14px;
+                        top: 7px;
+                    }
+
                 }
             }
         }
