--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,4 +13,6 @@
 @import 'block/consult';
 @import 'block/carousel';
 @import 'block/catalog';
+@import 'block/feedback';
+@import 'block/footer';
 @import 'base/media';
