--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,4 +16,6 @@
 @import 'block/feedback';
 @import 'block/footer';
 @import 'block/modal';
+@import 'block/pageup';
+@import 'base/pulse';
 @import 'base/media';
