--- a/src/sass/block/_modal.scss
+++ b/src/sass/block/_modal.scss
@@ -7,6 +7,14 @@
     background-color: rgba(0,0,0, .56)
 }
 .modal {
+    .error {
+        border: 1px solid red;
+    }
+    label.error {
+        border: none;
+        text-align: center;
+        margin-bottom: 15px;
+    }
     position: absolute;
     top: 50%;
     left: 50%;
